# Smoothness

./: CMakeLists.txt  README.md
src/: RotMove.cpp  RotMove3d.cpp  anima.cpp  car.cpp  gear.cpp  image_gen  image_gen.cpp  main.cpp  renderwaves.cpp  waves.cpp
src/lib/: tcharacter.hpp  tsmoothnes.hpp
